[metadata]
version = 0.0.1
license_file = LICENSE
name = lsplol
author = Sherlock Li
author_email = flyingsatin@gmail.com
description = 老色批抽图器
url = https://github.com/SatinWuker/lsp
project_urls =
    lsplol source = https://github.com/SatinWuker/lsp
classifiers =
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3

[options]
packages =
	src
python_requires = >=3.6
